cmake_minimum_required(VERSION 3.16)
set(PROJECT_NAME vicinae-linuxutils)
project(${PROJECT_NAME})
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_library(vicinae-linuxutils STATIC src/keyboard.cpp)
add_library(vicinae::linuxutils ALIAS vicinae-linuxutils)
target_include_directories(${PROJECT_NAME} PUBLIC include)
target_link_libraries(${PROJECT_NAME} PUBLIC)
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_23)
